--- a/Code/1 - word2vec 100k.ipynb
+++ b/Code/1 - word2vec 100k.ipynb
@@ -94,7 +94,9 @@
    "source": [
     "words = [item for sublist in phrases for item in sublist]\n",
     "print(type(words))\n",
-    "vocabulary = set(words)\n",
+    "vocabulary = list(dict.fromkeys(words))\n",
+    "with open(\"data/100k/vocabulary.file\", \"wb\") as f:\n",
+    "    pickle.dump(vocabulary, f, pickle.HIGHEST_PROTOCOL)\n",
     "print(\"Nombre de mots :\", len(words))\n",
     "print(\"Taille du vocabulaire :\", len(vocabulary))"
    ]
@@ -223,8 +225,6 @@
     "    return(list(test_sample))\n",
     "\n",
     "sample = 0.001\n",
-    "fdist = nltk.FreqDist(words)\n",
-    "vocabulary = list(set(words))\n",
     "index_mot = {index: w for (index, w) in enumerate(vocabulary)}\n",
     "mot_index = {w: index for (index, w) in enumerate(vocabulary)}\n",
     "proportion = np.array([(fdist[w]/ (len(words) * sample)) for w in vocabulary])\n",
@@ -349,13 +349,13 @@
     "        input.grad.data.zero_()\n",
     "        output.grad.data.zero_()\n",
     "        \n",
-    "    with open(\"data/input_100k_%i.file\" %(len(loss_tot)+1), \"wb\") as f:\n",
+    "    with open(\"data/100k/input_%i.file\" %(len(loss_tot)+1), \"wb\") as f:\n",
     "        pickle.dump(input, f, pickle.HIGHEST_PROTOCOL)\n",
-    "    with open(\"data/output_100k_%i.file\" %(len(loss_tot)+1), \"wb\") as f:\n",
+    "    with open(\"data/100k/output_%i.file\" %(len(loss_tot)+1), \"wb\") as f:\n",
     "        pickle.dump(output, f, pickle.HIGHEST_PROTOCOL)\n",
-    "    with open(\"data/loss_100k.file\", \"wb\") as f:\n",
+    "    with open(\"data/100k/loss.file\", \"wb\") as f:\n",
     "        pickle.dump(loss_tot, f, pickle.HIGHEST_PROTOCOL)\n",
-    "    with open(\"data/temps_par_epoch_100k.file\", \"wb\") as f:\n",
+    "    with open(\"data/100k/temps_par_epoch.file\", \"wb\") as f:\n",
     "        pickle.dump(temps_par_epoch, f, pickle.HIGHEST_PROTOCOL)\n",
     "    end_epoch = time.time()\n",
     "    temps_par_epoch.append(end_epoch - start_epoch)\n",
